Fix: Loading animations are immediately visible regardless of page height (#6649)
* feature: apply fixed styling to animation if page is scrollable

* Fix: remove state changes

* chore: remove duplicated css

--- a/src/Views/Components/ListTable/ListTable/ListTable.module.scss
+++ b/src/Views/Components/ListTable/ListTable/ListTable.module.scss
@@ -140,6 +140,20 @@
     overflow: hidden;
 }
 
+.relativeContainer {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    block-size: 100%;
+    inline-size: 100%;
+
+    .fixedContent {
+        position: fixed;
+        top: 50%;
+    }
+}
+
 .appear {
     animation: appear 0.1s ease-in;
 }
